...
                            }
                        }
                    }
                } label: {
                    Label("View Options", systemImage: "line.3.horizontal.decrease")
                }
                .accessibilityLabel("Album View Options")
                .accessibilityIdentifier("demo-library-albums-view-options")
            }
        }
        .task {
            #if os(iOS)
            await musicService.prepareFallbackLibraryIfPossible()
...
